# bigbench-lora-transfer

./:   README.md  .gitignore  pyproject.toml
configs/: base.yaml  eval_identify_odd_metaphor.yaml
scripts/: eval_adapter.py  sweep.py  train_adapter.py
src/bblt/: data.py  eval_mc.py  lora.py  prompts.py  train.py
src/bblt/configs/: base.yaml  train_implicatures.yaml  train_metaphor_boolean.yaml
